hermes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-yukulab
spec:
  selector:
    app: hermes-yukulab
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
